# IxG

./: .gitignore  CMakeLists.txt  README.md
examples/insatxgcs/: INSATxGCSAction.cpp  INSATxGCSAction.hpp  bfs_test.cpp  gcsopt_monotonicity.cpp  gcsopt_test.cpp  lbg_test.cpp  read_itamar_logs.cpp  run_insatxgcs.cpp  run_insatxgcs_vis.cpp  trigcs_monotonicity.cpp
examples/insatxgcs/resources/3hc10dtp/: far_goals.txt  far_starts.txt  goals.txt  starts.txt
examples/insatxgcs/resources/bimanual/: goals.txt  starts.txt
examples/robot_nav_2d/: RobotNav2dActions.cpp  RobotNav2dActions.hpp
include/common/: Action.hpp  Types.hpp
include/common/insat/: InsatAction.hpp
include/common/insatxgcs/: gcsbfs.hpp  utils.hpp
include/planners/: Planner.hpp
include/planners/insat/: INSATxGCS.hpp
include/planners/insat/opt/: GCSOpt.hpp  GCSSmoothOpt.hpp  LBGraph.hpp
scripts/: bfs_library.py
src/common/: State.cpp
src/common/insatxgcs/: gcsbfs.cpp  utils.cpp
src/planners/insat/: INSATxGCS.cpp
src/planners/insat/opt/: GCSOpt.cpp  GCSSmoothOpt.cpp  LBGraph.cpp
